examples/test/testpolicy9516.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9516
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key9: value42
      key6: value37
      key47: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value30
      podSelector:
        matchLabels:
          key32: value14
          key25: value9
